Fixes in navigation and header

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           href="#home"
           class="nav__logo"
         >
-          <img
+          <img class="nav__logo--img"
             src="./images/icons/Logo.svg"
             alt="Bakerlab"
           />
@@ -90,7 +90,7 @@
             href="#home"
             class="navigation__logo"
           >
-            <img
+            <img class="navigation__logo--img"
               src="./images/icons/Logo.svg"
               alt="Bakerlab"
             />
