--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!--#region head-->
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,14 +7,374 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/index.scss"
     />
+    <link
+      rel="icon"
+      href="./images/icon/Icon-cookie.png"
+    />
+    <title>Bakerlab</title>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <!--#endregion-->
+  <body class="page">
+    <!--#region header-->
+    <header class="header">
+      <div class="top-bar">
+        <a
+          href="#"
+          class="top-bar__logo"
+        >
+          <img
+            src="images/Logo.png"
+            alt="Logo"
+          />
+        </a>
+
+        <ol class="top-bar__links">
+          <li class="top-bar__link"><a href="#products">Products</a></li>
+          <li class="top-bar__link"><a href="#about-us">About Us</a></li>
+          <li class="top-bar__link"><a href="#">Blog</a></li>
+          <li class="top-bar__link">
+            <div class="icon icon--tel"></div>
+            <a href="#contacts-us">Contact us</a>
+          </li>
+        </ol>
+
+        <a
+          class="icon icon--menu"
+          href="#menu"
+        ></a>
+      </div>
+
+      <div class="header-bottom">
+        <p class="header-bottom__description">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+        <h1 class="header-bottom__title">Creative bakery</h1>
+        <img
+          src="./images/Cookie.png"
+          alt="Cookie"
+          class="header-bottom__photo"
+        />
+
+        <a
+          class="header-bottom__button"
+          href="#products"
+        >
+          <div class="icon icon--cookie"></div>
+          <span class="header-bottom__button__text">Learn more</span>
+        </a>
+      </div>
+    </header>
+    <!--#endregion-->
+
+    <!--#region menu-->
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="top-bar menu__top">
+        <a
+          href="#"
+          class="top-bar__logo"
+        >
+          <img
+            src="images/Logo.png"
+            alt="Logo"
+          />
+        </a>
+
+        <a
+          class="icon icon--close"
+          href="#"
+        ></a>
+      </div>
+
+      <div class="menu__bottom">
+        <ol class="menu__bottom__links">
+          <li class="menu__bottom__link"><a href="#products">Products</a></li>
+          <li class="menu__bottom__link"><a href="#about-us">About Us</a></li>
+          <li class="menu__bottom__link"><a href="#">Blog</a></li>
+          <li class="menu__bottom__link">
+            <div class="icon icon--tel"></div>
+            <a href="#contacts-us">Contact us</a>
+          </li>
+        </ol>
+      </div>
+    </aside>
+    <!--#endregion-->
+
+    <!--#region main-->
+    <main class="main">
+      <!--#region products-->
+      <section
+        class="products"
+        id="products"
+      >
+        <h2 class="products__title">What we bake</h2>
+        <p class="products__description">
+          We can customize our cookies right for your needs. Just imagine it
+        </p>
+
+        <div class="products__list">
+          <div class="products__item">
+            <img
+              src="./images/product-1.png"
+              alt="product-1"
+              class="products__item__image"
+            />
+            <div class="products__item__content">
+              <p class="products__item__title">Cakes</p>
+              <p class="products__item__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+
+              <a
+                href="#"
+                class="products__item__order-link"
+              >
+                <div class="icon icon--arrow"></div>
+                <span class="products__item__order-text">Order</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img
+              src="./images/product-2.png"
+              alt="product-2"
+              class="products__item__image"
+            />
+            <div class="products__item__content">
+              <p class="products__item__title">Cakes</p>
+              <p class="products__item__description">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+
+              <a
+                href="#"
+                class="products__item__order-link"
+              >
+                <div class="icon icon--arrow"></div>
+                <span class="products__item__order-text">Order</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img
+              src="./images/product-3.png"
+              alt="product-3"
+              class="products__item__image"
+            />
+            <div class="products__item__content">
+              <p class="products__item__title">Donuts</p>
+              <p class="products__item__description">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+
+              <a
+                href="#"
+                class="products__item__order-link"
+              >
+                <div class="icon icon--arrow"></div>
+                <span class="products__item__order-text">Order</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img
+              src="./images/product-4.png"
+              alt="product-4"
+              class="products__item__image"
+            />
+            <div class="products__item__content">
+              <p class="products__item__title">Donuts</p>
+              <p class="products__item__description">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+
+              <a
+                href="#"
+                class="products__item__order-link"
+              >
+                <div class="icon icon--arrow"></div>
+                <span class="products__item__order-text">Order</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img
+              src="./images/product-5.png"
+              alt="product-5"
+              class="products__item__image"
+            />
+            <div class="products__item__content">
+              <p class="products__item__title">Cakes</p>
+              <p class="products__item__description">
+                Chocolate salted caramel, Vanilla frutti pebbles inside
+              </p>
+
+              <a
+                href="#"
+                class="products__item__order-link"
+              >
+                <div class="icon icon--arrow"></div>
+                <span class="products__item__order-text">Order</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img
+              src="./images/product-6.png"
+              alt="product-6"
+              class="products__item__image"
+            />
+            <div class="products__item__content">
+              <p class="products__item__title">Cookies</p>
+              <p class="products__item__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+
+              <a
+                href="#"
+                class="products__item__order-link"
+              >
+                <div class="icon icon--arrow"></div>
+                <span class="products__item__order-text">Order</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--#endregion-->
+
+      <!--#region about-us-->
+      <section
+        class="about-us"
+        id="about-us"
+      >
+        <h2 class="about-us__title">Few words About us</h2>
+
+        <p class="about-us__description">
+          Like many design teams, Onfido made the transition from Abstract +
+          Sketch, to Figma in the last couple of years. One of the common
+          resistance points internally before making that switch, was Figma’s
+          lack of Git-style branching that Abstract enabled. The design team had
+          come to rely on branching and had built a lot of our processes around
+          it.
+        </p>
+
+        <div class="about-us__stats">
+          <h3 class="about-us__stats__title">2015</h3>
+          <p class="about-us__stats__descriprion">Foundation year</p>
+        </div>
+
+        <div class="about-us__stats">
+          <h3 class="about-us__stats__title">23</h3>
+          <p class="about-us__stats__descriprion">Stores</p>
+        </div>
+
+        <div class="about-us__stats">
+          <h3 class="about-us__stats__title">155</h3>
+          <p class="about-us__stats__descriprion">Companies</p>
+        </div>
+
+        <div class="about-us__stats">
+          <h3 class="about-us__stats__title">10k+</h3>
+          <p class="about-us__stats__descriprion">Clients</p>
+        </div>
+      </section>
+      <!--#endregion-->
+    </main>
+    <!--#endregion-->
+
+    <!--#region footer-->
+    <footer
+      class="footer"
+      id="contacts-us"
+    >
+      <a
+        href="#"
+        class="footer__logo"
+      >
+        <img
+          src="images/Logo-white.png"
+          alt="Logo"
+        />
+      </a>
+
+      <div class="footer__block">
+        <p class="footer__block__title">Menu</p>
+
+        <ol class="footer__block__links">
+          <li class="footer__block__link"><a href="#products">Products</a></li>
+          <li class="footer__block__link"><a href="#about-us">About Us</a></li>
+          <li class="footer__block__link"><a href="#">Blog</a></li>
+          <li class="footer__block__link"><a href="#">Terms & Privacy</a></li>
+        </ol>
+      </div>
+
+      <h3 class="footer__title">Contact us</h3>
+
+      <div class="footer__block">
+        <h3 class="footer__block__title">Call us</h3>
+
+        <ol class="footer__block__links">
+          <li class="footer__block__link">
+            <a href="tel:(629) 555-0129">(629) 555-0129</a>
+          </li>
+          <li class="footer__block__link">
+            <a href="tel:(603) 555-0123">(603) 555-0123</a>
+          </li>
+          <li class="footer__block__link">
+            <a href="tel:(704) 555-0127">(704) 555-0127</a>
+          </li>
+        </ol>
+      </div>
+
+      <div class="footer__block">
+        <h3 class="footer__block__title">Email us</h3>
+
+        <ol class="footer__block__links">
+          <li class="footer__block__link">
+            <a href="mailto:bakerlab@example.com">bakerlab@example.com</a>
+          </li>
+        </ol>
+      </div>
+
+      <div class="footer__icon">
+        <a
+          href="https://www.facebook.com/Bakerlab"
+          target="_blank"
+        >
+          <div class="icon icon--facebook"></div>
+        </a>
+        <a
+          href="https://www.instagram.com/uwbakerlab/"
+          target="_blank"
+        >
+          <div class="icon icon--instagram"></div>
+        </a>
+        <a
+          href="https://twitter.com/Bakerlab"
+          target="_blank"
+        >
+          <div class="icon icon--twitter"></div>
+        </a>
+      </div>
+
+      <p class="footer__copyright">© Bakerlab 2022</p>
+    </footer>
+    <!--#endregion-->
   </body>
 </html>
