--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,7 @@
         </div>
       </div>
     </header>
+
     <aside
       class="page__menu"
       id="menu"
@@ -305,7 +306,7 @@
               <div class="card__info">
                 <p class="card__name uppercase">Cakes</p>
                 <p class="card__text">
-                  Chocolate salted caramel, Vanilla frutti pebbles
+                  Cake with chocolate salted caramel, Vanilla frutti pebbles inside
                 </p>
               </div>
 
@@ -383,6 +384,7 @@
         </section>
       </div>
     </main>
+
     <footer
       class="footer"
       id="blog"
