--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,433 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
+  <!-- #region head -->
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="../src/images/favicon/favicon_16-16.png"
+    />
+    <title>Bakerlab</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/index.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!-- #endregion -->
+  <body class="page__body">
+    <!-- #region header -->
+    <header class="header">
+      <div class="top-bar">
+        <div class="top-bar__logoBlock">
+          <a
+            href="#"
+            class="top-bar__logo-link"
+          >
+            <img
+              src="./images/logo/logo-x2.png"
+              alt="Bakerlab logo"
+              class="top-bar__logo"
+            />
+          </a>
+        </div>
+
+        <div class="top-bar__navBlock">
+          <nav class="top-bar__nav">
+            <a
+              class="top-bar__link"
+              href="#products"
+            >
+              Products
+            </a>
+            <a
+              class="top-bar__link"
+              href="#about-us"
+            >
+              About Us
+            </a>
+            <a
+              class="top-bar__link"
+              href="#blog"
+            >
+              Blog
+            </a>
+            <a
+              class="top-bar__link--contact-us"
+              href="#contact-us"
+            >
+              Contact us
+            </a>
+          </nav>
+        </div>
+
+        <div class="top-bar__burgerBlock">
+          <a
+            class="icon icon--menu"
+            href="#menu"
+          ></a>
+        </div>
+      </div>
+
+      <div class="header__content container">
+        <p class="header__text">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+        <h1 class="header__title">Creative bakery</h1>
+        <div class="header__image"></div>
+        <a
+          class="header__button"
+          href="#"
+        >
+          Learn more
+        </a>
+      </div>
+    </header>
+    <!-- #endregion -->
+    <!-- #region aside -->
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="top-bar">
+        <div class="top-bar__logoBlock">
+          <a
+            href="#"
+            class="top-bar__logo-link"
+          >
+            <img
+              src="./images/logo/logo-x2.png"
+              alt="Bakerlab logo"
+              class="top-bar__logo"
+            />
+          </a>
+        </div>
+
+        <a
+          href="#"
+          class="icon icon--close"
+        ></a>
+      </div>
+
+      <div class="menu__navBlock">
+        <nav class="menu__nav">
+          <a
+            class="menu__link"
+            href="#products"
+          >
+            Products
+          </a>
+          <a
+            class="menu__link"
+            href="#about-us"
+          >
+            About Us
+          </a>
+          <a
+            class="menu__link"
+            href="#blog"
+          >
+            Blog
+          </a>
+          <a
+            class="menu__link--contact-us"
+            href="#contact-us"
+          >
+            Contact us
+          </a>
+        </nav>
+      </div>
+    </aside>
+    <!-- #endregion -->
+    <!-- #region main -->
+    <main class="page__main main">
+      <div class="main__content container">
+        <section
+          class="main__products"
+          id="products"
+        >
+          <div class="main__blockTitle">
+            <h3 class="main__title">What we bake</h3>
+            <p class="main__text">
+              We can customize our cookies right for your needs. Just imagine it
+            </p>
+          </div>
+
+          <div class="main__blockProductsOne">
+            <div class="card">
+              <img
+                src="./images/products/products-11-x2.png"
+                alt="Cake"
+                class="card__image"
+              />
+              <h4 class="card__title">Cakes</h4>
+              <p class="card__text">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                class="card__button"
+                href="#"
+              >
+                Order
+              </a>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/products/products-12-x2.png"
+                alt="Cake"
+                class="card__image"
+              />
+              <h4 class="card__title">Cakes</h4>
+              <p class="card__text">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+              <a
+                class="card__button"
+                href="#"
+              >
+                Order
+              </a>
+            </div>
+          </div>
+
+          <div class="main__blockProductsTwo">
+            <div class="card">
+              <img
+                src="./images/products/products-21-x2.png"
+                alt="Donut"
+                class="card__image"
+              />
+              <h4 class="card__title">Donuts</h4>
+              <p class="card__text">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+              <a
+                class="card__button"
+                href="#"
+              >
+                Order
+              </a>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/products/products-22-x2.png"
+                alt="Donut"
+                class="card__image"
+              />
+              <h4 class="card__title">Donuts</h4>
+              <p class="card__text">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+              <a
+                class="card__button"
+                href="#"
+              >
+                Order
+              </a>
+            </div>
+          </div>
+
+          <div class="main__blockProductsThree">
+            <div class="card">
+              <img
+                src="./images/products/products-31-x2.png"
+                alt="Cake"
+                class="card__image"
+              />
+              <h4 class="card__title">Cakes</h4>
+              <p class="card__text">
+                Cake with chocolate salted caramel, Vanilla frutti pebbles
+                inside
+              </p>
+              <a
+                class="card__button"
+                href="#"
+              >
+                Order
+              </a>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/products/products-32-x2.png"
+                alt="Cake"
+                class="card__image"
+              />
+              <h4 class="card__title">Cakes</h4>
+              <p class="card__text">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+              <a
+                class="card__button"
+                href="#"
+              >
+                Order
+              </a>
+            </div>
+          </div>
+        </section>
+        <section
+          class="about-us"
+          id="about-us"
+        >
+          <!-- <div class="about-us__content"></div> -->
+          <h2 class="about-us__title">Few words About us</h2>
+          <p class="about-us__text">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </p>
+          <div class="about-us__years">
+            <p class="about-us__text--big">2015</p>
+            <p class="about-us__text--small">Foundation year</p>
+          </div>
+
+          <div class="about-us__stores">
+            <p class="about-us__text--big">23</p>
+            <p class="about-us__text--small">Stores</p>
+          </div>
+
+          <div class="about-us__companies">
+            <p class="about-us__text--big">155</p>
+            <p class="about-us__text--small">Companies</p>
+          </div>
+
+          <div class="about-us__clients">
+            <p class="about-us__text--big">10k+</p>
+            <p class="about-us__text--small">Clients</p>
+          </div>
+        </section>
+      </div>
+    </main>
+    <!-- #endregion -->
+    <!-- #region footer -->
+    <footer class="footer">
+      <section class="footer__content container">
+        <div class="footer__section-menu">
+          <div class="footer__logoBlock">
+            <a
+              href="#"
+              class="footer__logo-link"
+            >
+              <img
+                src="./images/logo/logo-footer-x2.png"
+                alt="Bakerlab logo"
+                class="footer__logo"
+              />
+            </a>
+          </div>
+
+          <nav class="footer__nav">
+            <h4 class="footer__title">Menu</h4>
+            <a
+              href="#products"
+              class="footer__text"
+            >
+              Products
+            </a>
+            <a
+              href="#about-us"
+              class="footer__text"
+            >
+              About Us
+            </a>
+            <a
+              href="#"
+              class="footer__text"
+            >
+              Blog
+            </a>
+            <a
+              href="#"
+              class="footer__text"
+            >
+              Terms & Privacy
+            </a>
+          </nav>
+        </div>
+
+        <div
+          class="footer__section-contacts"
+          id="contact-us"
+        >
+          <h3 class="footer__contactsTitle">Contact us</h3>
+          <div class="footer__contacts">
+            <div class="footer__contacts--call">
+              <h4 class="footer__title">Call us</h4>
+              <a
+                href="tel:(629) 555-0129"
+                class="footer__text"
+              >
+                (629) 555-0129
+              </a>
+              <a
+                href="tel:(603) 555-0123"
+                class="footer__text"
+              >
+                (603) 555-0123
+              </a>
+              <a
+                href="tel:(704) 555-0127"
+                class="footer__text"
+              >
+                (704) 555-0127
+              </a>
+            </div>
+            <div class="footer__contacts--email">
+              <h4 class="footer__title">Email us</h4>
+              <a
+                href="mailto:bakerlab@example.com"
+                class="footer__text"
+              >
+                bakerlab@example.com
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="footer__section-socials"
+          id="blog"
+        >
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            class="icon icon--facebook"
+          ></a>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            class="icon icon--instagram"
+          ></a>
+          <a
+            href="https://twitter.com"
+            target="_blank"
+            class="icon icon--twitter"
+          ></a>
+        </div>
+
+        <div class="footer__section-copyright">
+          <p class="footer__mark">© Bakerlab 2022</p>
+        </div>
+      </section>
+    </footer>
+    <!-- #endregion -->
     <script src="scripts/main.js"></script>
   </body>
 </html>
