fix solution according to checklist

--- a/src/index.html
+++ b/src/index.html
@@ -160,13 +160,13 @@
             We bake your fantasies — croissants, cakes, cookies, and cupcakes.
           </p>
           <h1 class="hero__title">Creative bakery</h1>
-          <button
-            type="button"
+          <a
+            href="#about-us"
             class="hero__button"
           >
             <div class="icon icon--cookie"></div>
             Learn more
-          </button>
+          </a>
         </div>
       </section>
 
@@ -194,8 +194,8 @@
                 Oatmeal cookies with golden raisins, orange zest and chocolate
                 chips
               </p>
-              <button
-                type="button"
+              <a
+                href="#contacts"
                 class="product__button"
               >
                 <img
@@ -203,7 +203,7 @@
                   alt="Arrow icon"
                 />
                 Order
-              </button>
+              </a>
             </article>
 
             <article class="products__item product">
@@ -217,8 +217,8 @@
                 Chocolate biscuit coffee cake topped with a buttercream and
                 powder
               </p>
-              <button
-                type="button"
+              <a
+                href="#contacts"
                 class="product__button"
               >
                 <img
@@ -226,7 +226,7 @@
                   alt="Arrow icon"
                 />
                 Order
-              </button>
+              </a>
             </article>
           </div>
 
@@ -242,8 +242,8 @@
                 Light multi-layered croissant strewn with cinammon and almond
                 “petals”
               </p>
-              <button
-                type="button"
+              <a
+                href="#contacts"
                 class="product__button"
               >
                 <img
@@ -251,7 +251,7 @@
                   alt="Arrow icon"
                 />
                 Order
-              </button>
+              </a>
             </article>
 
             <article class="products__item product">
@@ -264,8 +264,8 @@
               <p class="product__text">
                 Light multi-layered croissant strewn with coconut and nuts
               </p>
-              <button
-                type="button"
+              <a
+                href="#contacts"
                 class="product__button"
               >
                 <img
@@ -273,7 +273,7 @@
                   alt="Arrow icon"
                 />
                 Order
-              </button>
+              </a>
             </article>
           </div>
 
@@ -288,8 +288,8 @@
               <p class="product__text">
                 Chocolate salted caramel, Vanilla frutti pebbles
               </p>
-              <button
-                type="button"
+              <a
+                href="#contacts"
                 class="product__button"
               >
                 <img
@@ -297,7 +297,7 @@
                   alt="Arrow icon"
                 />
                 Order
-              </button>
+              </a>
             </article>
 
             <article class="products__item product">
@@ -311,8 +311,8 @@
                 Oatmeal cookies with golden raisins, orange zest and chocolate
                 chips
               </p>
-              <button
-                type="button"
+              <a
+                href="#contacts"
                 class="product__button"
               >
                 <img
@@ -320,7 +320,7 @@
                   alt="Arrow icon"
                 />
                 Order
-              </button>
+              </a>
             </article>
           </div>
         </div>
@@ -474,7 +474,8 @@
             <li class="footer__socials-item">
               <a
                 class="footer__socials-link"
-                href="#"
+                href="https://www.facebook.com/"
+                target="_blank"
               >
                 <div class="icon icon--facebook"></div>
               </a>
@@ -483,7 +484,8 @@
             <li class="footer__socials-item">
               <a
                 class="footer__socials-link"
-                href="#"
+                href="https://www.instagram.com/"
+                target="_blank"
               >
                 <div class="icon icon--instagram"></div>
               </a>
@@ -492,7 +494,8 @@
             <li class="footer__socials-item">
               <a
                 class="footer__socials-link"
-                href="#"
+                href="https://x.com/"
+                target="_blank"
               >
                 <div class="icon icon--twitter"></div>
               </a>
