--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,559 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative bakery</title>
+    <link
+      rel="icon"
+      href="./images/bakerlab-favicon.png"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body
+    class="page"
+    id="page"
+  >
+    <header
+      class="header"
+      id="header"
+    >
+      <div class="header__top-bar top-bar">
+        <a href="#">
+          <img
+            class="top-bar__logo"
+            src="./images/bakery-logo.png"
+            alt="Bakerlab logo"
+          />
+        </a>
+
+        <nav class="top-bar__nav nav">
+          <li class="nav__item">
+            <a
+              class="nav__link"
+              href="#products"
+            >
+              Products
+            </a>
+          </li>
+
+          <li class="nav__item">
+            <a
+              class="nav__link"
+              href="#about-us"
+            >
+              About Us
+            </a>
+          </li>
+
+          <li class="nav__item">
+            <a
+              class="nav__link"
+              href="#"
+            >
+              Blog
+            </a>
+          </li>
+
+          <li class="nav__item nav__item--button">
+            <a
+              class="nav__phone-icon"
+              href="tel:063 984 20 86"
+            ></a>
+            <a
+              class="nav__link"
+              href="#contacts"
+            >
+              Contact us
+            </a>
+          </li>
+        </nav>
+
+        <a
+          href="#menu"
+          class="top-bar__menu-icon"
+        ></a>
+      </div>
+
+      <section class="hero-section">
+        <p class="hero-section__text">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+
+        <div class="hero-section__media">
+          <h1 class="hero-section__title title">Creative bakery</h1>
+          <img
+            src="images/header-bg.png"
+            alt="Cookie"
+            class="hero-section__image"
+          />
+        </div>
+
+        <a
+          href="#about-us"
+          class="hero-section__button"
+        >
+          <svg class="hero-section__icon">
+            <use href="./images/sprite.svg#icon-cookie"></use>
+          </svg>
+          Learn More
+        </a>
+      </section>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="menu__top-bar top-bar">
+        <a href="#page">
+          <img
+            class="top-bar__logo"
+            src="./images/bakery-logo.png"
+            alt="logo"
+          />
+        </a>
+
+        <a
+          href="#page"
+          class="menu__close-icon"
+        ></a>
+      </div>
+
+      <nav class="menu__nav nav">
+        <li class="nav__item">
+          <a
+            class="nav__link"
+            href="#products"
+          >
+            Products
+          </a>
+        </li>
+
+        <li class="nav__item">
+          <a
+            class="nav__link"
+            href="#about-us"
+          >
+            About Us
+          </a>
+        </li>
+
+        <li class="nav__item">
+          <a
+            class="nav__link"
+            href="#"
+          >
+            Blog
+          </a>
+        </li>
+
+        <li class="nav__item nav__item--button">
+          <a
+            class="nav__phone-icon"
+            href="tel:063 984 20 86"
+          ></a>
+          <a
+            class="nav__link"
+            href="#contacts"
+          >
+            Contact us
+          </a>
+        </li>
+      </nav>
+    </aside>
+
+    <main class="main">
+      <section
+        class="products-section"
+        id="products"
+      >
+        <h2 class="products-section__title title">What we bake</h2>
+        <p class="products-section__description">
+          We can customize our cookies right for your needs. Just imagine it
+        </p>
+
+        <div class="products-section__cards">
+          <article
+            class="product"
+            data-aos="fade-right"
+            data-aos-duration="800"
+          >
+            <div class="product__photo-wrapper">
+              <img
+                class="product__photo"
+                src="./images/products/product-photo-1.jpg"
+                alt="Lemon cake with vanilla cream filling and lemon zest glaze"
+              />
+            </div>
+            <h3 class="product__title">Cakes</h3>
+            <p class="product__description">
+              Lemon cake with vanilla cream filling and lemon zest glaze
+            </p>
+            <a
+              class="product__btn"
+              href="#contacts"
+            >
+              <svg class="product__icon">
+                <use href="./images/sprite.svg#icon-arrow-right"></use>
+              </svg>
+              Order
+            </a>
+          </article>
+
+          <article
+            class="product"
+            data-aos="fade-left"
+            data-aos-delay="200"
+            data-aos-duration="800"
+          >
+            <div class="product__photo-wrapper">
+              <img
+                class="product__photo"
+                src="./images/products/product-photo-2.jpg"
+                alt="Chocolate biscuit coffee cake topped with a buttercream and powder"
+              />
+            </div>
+            <h3 class="product__title">Cakes</h3>
+            <p class="product__description">
+              Chocolate biscuit coffee cake topped with a buttercream and powder
+            </p>
+            <a
+              class="product__btn"
+              href="#contacts"
+            >
+              <svg class="product__icon">
+                <use href="./images/sprite.svg#icon-arrow-right"></use>
+              </svg>
+              Order
+            </a>
+          </article>
+
+          <article
+            class="product"
+            data-aos="fade-right"
+            data-aos-duration="800"
+          >
+            <div class="product__photo-wrapper">
+              <img
+                class="product__photo"
+                src="./images/products/product-photo-3.jpg"
+                alt="Light multi-layered croissant strewn with cinammon and almond
+              “petals”"
+              />
+            </div>
+            <h3 class="product__title">Cakes</h3>
+            <p class="product__description">
+              Light multi-layered croissant strewn with cinammon and almond
+              “petals”
+            </p>
+            <a
+              class="product__btn"
+              href="#contacts"
+            >
+              <svg class="product__icon">
+                <use href="./images/sprite.svg#icon-arrow-right"></use>
+              </svg>
+              Order
+            </a>
+          </article>
+
+          <article
+            class="product"
+            data-aos="fade-left"
+            data-aos-delay="200"
+            data-aos-duration="800"
+          >
+            <div class="product__photo-wrapper">
+              <img
+                class="product__photo"
+                src="./images/products/product-photo-4.jpg"
+                alt="Light multi-layered croissant strewn with coconut and nuts"
+              />
+            </div>
+            <h3 class="product__title">Cakes</h3>
+            <p class="product__description">
+              Light multi-layered croissant strewn with coconut and nuts
+            </p>
+            <a
+              class="product__btn"
+              href="#contacts"
+            >
+              <svg class="product__icon">
+                <use href="./images/sprite.svg#icon-arrow-right"></use>
+              </svg>
+              Order
+            </a>
+          </article>
+
+          <article
+            class="product"
+            data-aos="fade-right"
+            data-aos-duration="800"
+          >
+            <div class="product__photo-wrapper">
+              <img
+                class="product__photo"
+                src="./images/products/product-photo-5.jpg"
+                alt="Chocolate salted caramel, Vanilla frutti pebbles"
+              />
+            </div>
+            <h3 class="product__title">Cakes</h3>
+            <p class="product__description">
+              Chocolate salted caramel, Vanilla frutti pebbles inside
+            </p>
+            <a
+              class="product__btn"
+              href="#contacts"
+            >
+              <svg class="product__icon">
+                <use href="./images/sprite.svg#icon-arrow-right"></use>
+              </svg>
+              Order
+            </a>
+          </article>
+
+          <article
+            class="product"
+            data-aos="fade-left"
+            data-aos-delay="200"
+            data-aos-duration="800"
+          >
+            <div class="product__photo-wrapper">
+              <img
+                class="product__photo"
+                src="./images/products/product-photo-6.jpg"
+                alt="Oatmeal cookies with golden raisins, orange zest and chocolate chips"
+              />
+            </div>
+            <h3 class="product__title">Cakes</h3>
+            <p class="product__description">
+              Oatmeal cookies with golden raisins, orange zest and chocolate
+              chips
+            </p>
+            <a
+              class="product__btn"
+              href="#contacts"
+            >
+              <svg class="product__icon">
+                <use href="./images/sprite.svg#icon-arrow-right"></use>
+              </svg>
+              Order
+            </a>
+          </article>
+        </div>
+      </section>
+
+      <section
+        class="about-us-section"
+        id="about-us"
+      >
+        <div class="about-us-section__top">
+          <h2 class="about-us-section__title title">Few words About us</h2>
+
+          <p class="about-us-section__description">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </p>
+        </div>
+
+        <div class="about-us-section__bottom">
+          <div class="about-us-section__stat">
+            <p class="about-us-section__stat-value">2015</p>
+            <p class="about-us-section__stat-label">Foundation year</p>
+          </div>
+
+          <div class="about-us-section__stat">
+            <p class="about-us-section__stat-value">23</p>
+            <p class="about-us-section__stat-label">Stores</p>
+          </div>
+
+          <div class="about-us-section__stat">
+            <p class="about-us-section__stat-value">155</p>
+            <p class="about-us-section__stat-label">Companies</p>
+          </div>
+
+          <div class="about-us-section__stat">
+            <p class="about-us-section__stat-value">10k+</p>
+            <p class="about-us-section__stat-label">Clients</p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <nav class="footer__menu">
+        <a
+          class="footer__logo-link"
+          href="#"
+        >
+          <img
+            class="footer__logo"
+            src="./images/bakery-logo-white.png"
+            alt="Bakerlab logo"
+          />
+        </a>
+
+        <ul class="list">
+          <li class="list__title">Menu</li>
+
+          <li class="list__item">
+            <a
+              class="list__link"
+              href="#products"
+            >
+              Products
+            </a>
+          </li>
+
+          <li class="list__item">
+            <a
+              class="list__link"
+              href="#about-us"
+            >
+              About Us
+            </a>
+          </li>
+
+          <li class="list__item">
+            <a
+              class="list__link"
+              href="#"
+            >
+              Blog
+            </a>
+          </li>
+
+          <li class="list__item">
+            <a
+              class="list__link"
+              href="#contacts"
+            >
+              Terms & Privacy
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <section
+        class="footer__contacts"
+        id="contacts"
+      >
+        <h2 class="footer__title-contacts title">Contact us</h2>
+
+        <ul class="list">
+          <li class="list__title">Call us</li>
+
+          <li class="list__item">
+            <a
+              class="list__link"
+              href="tel:(629) 555-0129"
+            >
+              (629) 555-0129
+            </a>
+          </li>
+
+          <li class="list__item">
+            <a
+              class="list__link"
+              href="tel:(603) 555-0123"
+            >
+              (603) 555-0123
+            </a>
+          </li>
+
+          <li class="list__item">
+            <a
+              class="list__link"
+              href="tel:(704) 555-0127"
+            >
+              (704) 555-0127
+            </a>
+          </li>
+        </ul>
+
+        <ul class="list">
+          <li class="list__title">Email us</li>
+
+          <li class="list__item">
+            <a
+              class="list__link"
+              href="mailto:bakerlab@example.com"
+            >
+              bakerlab@example.com
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <ul class="footer__social-media">
+        <li>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            class="footer__icon-link"
+            aria-label="Go to Facebook"
+          >
+            <svg class="footer__icon">
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            class="footer__icon-link"
+            aria-label="Go to Instagram"
+          >
+            <svg class="footer__icon">
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li>
+          <a
+            href="https://x.com/"
+            target="_blank"
+            class="footer__icon-link"
+            aria-label="Go to Twitter"
+          >
+            <svg class="footer__icon">
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+
+      <p class="footer__copyright">© Bakerlab 2022</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
