first draft lamding

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,352 @@
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <div class="bakery container">
+      <header class="bakery__header header">
+        <div class="header__mobile-top-section">
+          <img
+            src="./images/icons/logo.svg"
+            alt="logo"
+            class="header__logo logo"
+          />
+          <div class="header__burger burger"></div>
+        </div>
+
+        <nav class="header__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                href="#products"
+                class="nav__link"
+              >
+                Products
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#about"
+                class="nav__link"
+              >
+                About Us
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#greeting"
+                class="nav__link"
+              >
+                Blog
+              </a>
+            </li>
+
+            <li class="nav__item nav__item--tel">
+              <a
+                href="tel:(629) 555-0129"
+                class="nav__link nav__link--tel"
+              >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      <main class="bakery__sections sections">
+        <section
+          id="greeting"
+          class="sections__section section section--greeting"
+        >
+          <p class="section--greeting__text text">
+            We bake your fantasies — croissants,
+            <br />
+            cakes, cookies, and cupcakes.
+          </p>
+
+          <h1 class="section--greeting__title">Creative bakery</h1>
+
+          <div class="section--greeting__background"></div>
+
+          <button class="section--greeting__button button">
+            <a
+              href="#"
+              class="button__content"
+            >
+              Learn more
+            </a>
+          </button>
+        </section>
+
+        <!-- <section id="products" class="sections__section section section--products">
+          <h1 class="section--products__title title">What we bake</h1>
+
+          <p class="section--products__text text"></p>
+
+          <div class="section--products__product-group">
+            <div class="card">
+              <img
+                src="./images/photo-product-01.png"
+                alt="go to cakes page"
+              />
+              <h4 class="card__title">cakes</h4>
+
+              <p class="card__text text">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+
+              <a
+                href="#"
+                class="card__order-button"
+              >
+                order
+              </a>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/photo-product-02.png"
+                alt="go to cakes page"
+              />
+              <h4 class="card__title">cakes</h4>
+
+              <p class="card__text text">
+                Chocolate biscuit coffee cake topped with a buttercream and
+                powder
+              </p>
+
+              <a
+                href="#"
+                class="card__order-button"
+              >
+                order
+              </a>
+            </div>
+          </div>
+
+          <div class="section--products__product-group">
+            <div class="card">
+              <img
+                src="./images/photo-product-03.png"
+                alt="go to cakes page"
+              />
+              <h4 class="card__title">donuts</h4>
+
+              <p class="card__text text">
+                Light multi-layered croissant strewn with cinammon and almond
+                “petals”
+              </p>
+
+              <a
+                href="#"
+                class="card__order-button"
+              >
+                order
+              </a>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/photo-product-04.png"
+                alt="go to cakes page"
+              />
+              <h4 class="card__title">donuts</h4>
+
+              <p class="card__text text">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+
+              <a
+                href="#"
+                class="card__order-button"
+              >
+                order
+              </a>
+            </div>
+          </div>
+
+          <div class="section--products__product-group">
+            <div class="card">
+              <img
+                src="./images/photo-product-05.png"
+                alt="go to cakes page"
+              />
+              <h4 class="card__title">cakes</h4>
+
+              <p class="card__text text">
+                Cake with chocolate salted caramel, Vanilla frutti pebbles
+                inside
+              </p>
+
+              <a
+                href="#"
+                class="card__order-button"
+              >
+                order
+              </a>
+            </div>
+
+            <div class="card">
+              <img
+                src="./images/photo-product-06.png"
+                alt="go to cakes page"
+              />
+              <h4 class="card__title">cookies</h4>
+
+              <p class="card__text text">
+                Oatmeal cookies with golden raisins, orange zest and chocolate
+                chips
+              </p>
+
+              <a
+                href="#"
+                class="card__order-button"
+              >
+                order
+              </a>
+            </div>
+          </div>
+        </section>
+
+        <section id="about" class="sections__section section section--about">
+          <img
+            src="./images/Crumbs.png"
+            alt="crumbs"
+            class="section--about__background"
+          />
+
+          <div class="section--about__info">
+            <h1 class="section--about__info__title">Few words About us</h1>
+            <p class="section--about__info__text text">
+              Like many design teams, Onfido made the transition from Abstract +
+              Sketch, to Figma in the last couple of years. One of the common
+              resistance points internally before making that switch, was
+              Figma’s lack of Git-style branching that Abstract enabled. The
+              design team had come to rely on branching and had built a lot of
+              our processes around it.
+            </p>
+          </div>
+
+          <div class="section--about__statistics">
+            <div class="section--about__statistics__block">
+              <h1 class="section--about__statistics__block__figures">2015</h1>
+              <p class="section--about__statistics__block__text text">
+                Foundation year
+              </p>
+            </div>
+            <div class="section--about__statistics__block">
+              <h1 class="section--about__statistics__block__figures">23</h1>
+              <p class="section--about__statistics__block__text text">Stores</p>
+            </div>
+            <div class="section--about__statistics__block">
+              <h1 class="section--about__statistics__block__figures">155</h1>
+              <p class="section--about__statistics__block__text text">
+                Companies
+              </p>
+            </div>
+            <div class="section--about__statistics__block">
+              <h1 class="section--about__statistics__block__figures">10k+</h1>
+              <p class="section--about__statistics__block__text text">
+                Clients
+              </p>
+            </div>
+          </div>
+        </section> -->
+      </main>
+
+      <footer class="bakery__footer footer">
+        <div class="footer__info-sections">
+          <section class="footer__section">
+            <img
+              src="./images/icons/logo.svg"
+              alt="logo"
+              class="footer__logo"
+            />
+            <div class="footer__subsection">
+              <h4 class="footer__subsection__title">menu</h4>
+
+              <ul class="footer__subsection__list">
+                <li class="footer__subsection__list__item">
+                  <a href="#products">Products</a>
+                </li>
+                <li class="footer__subsection__list__item">
+                  <a href="#about">About Us</a>
+                </li>
+                <li class="footer__subsection__list__item">
+                  <a href="#greeting">Blog</a>
+                </li>
+                <li class="footer__subsection__list__item">
+                  <a href="#">Terms & Privacy</a>
+                </li>
+              </ul>
+            </div>
+          </section>
+
+          <section class="footer__section">
+            <h1 class="footer__title">Contact us</h1>
+
+            <div class="footer__subsection">
+              <h4 class="footer__subsection__title">call us</h4>
+
+              <ul class="footer__subsection__list">
+                <li class="footer__subsection__list__item">
+                  <a href="tel:(629) 555-0129">(629) 555-0129</a>
+                </li>
+                <li class="footer__subsection__list__item">
+                  <a href="tel:(603) 555-0123">(603) 555-0123</a>
+                </li>
+                <li class="footer__subsection__list__item">
+                  <a href="tel:(704) 555-0127">(704) 555-0127</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer__subsection">
+              <h4 class="footer__subsection__title">email us</h4>
+
+              <ul class="footer__subsection__list">
+                <li class="footer__subsection__list__item">
+                  <a href="email:bakerlab@example.com">bakerlab@example.com</a>
+                </li>
+              </ul>
+            </div>
+          </section>
+        </div>
+
+        <section class="footer__bottom">
+          <ul class="footer__bottom__socials">
+            <li class="footer__bottom__socials__icon">
+              <a href="#">
+                <img
+                  src="./images/icons/icon-facebook.svg"
+                  alt="icon-facebook"
+                />
+              </a>
+            </li>
+            <li class="footer__bottom__socials__icon">
+              <a href="#">
+                <img
+                  src="./images/icons/icon-instagram.svg"
+                  alt="icon-instagram"
+                />
+              </a>
+            </li>
+            <li class="footer__bottom__socials__icon">
+              <a href="#">
+                <img
+                  src="./images/icons/icon-twitter.svg"
+                  alt="icon-twitter"
+                />
+              </a>
+            </li>
+          </ul>
+
+          <p class="footer__bottom__year">© Bakerlab 2022</p>
+        </section>
+      </footer>
+    </div>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
