what we bake section finished

--- a/src/index.html
+++ b/src/index.html
@@ -90,20 +90,31 @@
           </button>
         </section>
 
-        <!-- <section id="products" class="sections__section section section--products">
-          <h1 class="section--products__title title">What we bake</h1>
+        <section
+          id="products"
+          class="sections__section section section--products"
+        >
+          <div class="section--products__header">
+            <h1 class="section--products__title title">What we bake</h1>
 
-          <p class="section--products__text text"></p>
+            <p class="section--products__text text">
+              We can customize our cookies right for your needs. Just imagine it
+            </p>
+          </div>
 
           <div class="section--products__product-group">
             <div class="card">
-              <img
-                src="./images/photo-product-01.png"
-                alt="go to cakes page"
-              />
+              <div class="card__img-wrap">
+                <img
+                  class="card__img"
+                  src="./images/photo-product-01.png"
+                  alt="go to cakes page"
+                />
+              </div>
+
               <h4 class="card__title">cakes</h4>
 
-              <p class="card__text text">
+              <p class="card__text">
                 Oatmeal cookies with golden raisins, orange zest and chocolate
                 chips
               </p>
@@ -117,10 +128,14 @@
             </div>
 
             <div class="card">
-              <img
-                src="./images/photo-product-02.png"
-                alt="go to cakes page"
-              />
+              <div class="card__img-wrap">
+                <img
+                  class="card__img"
+                  src="./images/photo-product-02.png"
+                  alt="go to cakes page"
+                />
+              </div>
+
               <h4 class="card__title">cakes</h4>
 
               <p class="card__text text">
@@ -137,12 +152,16 @@
             </div>
           </div>
 
-          <div class="section--products__product-group">
+          <div class="section--products__product-group section--products__product-group--even">
             <div class="card">
-              <img
-                src="./images/photo-product-03.png"
-                alt="go to cakes page"
-              />
+              <div class="card__img-wrap">
+                <img
+                  class="card__img"
+                  src="./images/photo-product-03.png"
+                  alt="go to cakes page"
+                />
+              </div>
+
               <h4 class="card__title">donuts</h4>
 
               <p class="card__text text">
@@ -159,10 +178,14 @@
             </div>
 
             <div class="card">
-              <img
-                src="./images/photo-product-04.png"
-                alt="go to cakes page"
-              />
+              <div class="card__img-wrap">
+                <img
+                  class="card__img"
+                  src="./images/photo-product-04.png"
+                  alt="go to cakes page"
+                />
+              </div>
+
               <h4 class="card__title">donuts</h4>
 
               <p class="card__text text">
@@ -180,10 +203,14 @@
 
           <div class="section--products__product-group">
             <div class="card">
-              <img
-                src="./images/photo-product-05.png"
-                alt="go to cakes page"
-              />
+              <div class="card__img-wrap">
+                <img
+                  class="card__img"
+                  src="./images/photo-product-05.png"
+                  alt="go to cakes page"
+                />
+              </div>
+
               <h4 class="card__title">cakes</h4>
 
               <p class="card__text text">
@@ -200,10 +227,14 @@
             </div>
 
             <div class="card">
-              <img
-                src="./images/photo-product-06.png"
-                alt="go to cakes page"
-              />
+              <div class="card__img-wrap">
+                <img
+                  class="card__img"
+                  src="./images/photo-product-06.png"
+                  alt="go to cakes page"
+                />
+              </div>
+
               <h4 class="card__title">cookies</h4>
 
               <p class="card__text text">
@@ -221,7 +252,10 @@
           </div>
         </section>
 
-        <section id="about" class="sections__section section section--about">
+        <section
+          id="about"
+          class="sections__section section section--about"
+        >
           <img
             src="./images/Crumbs.png"
             alt="crumbs"
@@ -264,7 +298,7 @@
               </p>
             </div>
           </div>
-        </section> -->
+        </section>
       </main>
 
       <footer class="bakery__footer footer">
